# dune-starter

./: README.md  init.ml  init.sh
proj/: README.md  dune-project  proj.opam
proj/src/lib/: Proj.ml  dune
proj/src/test/: dune  proj_test.ml
proj/test/: dune  run_tests.ml
