opam-version: "2.0"
maintainer: "YOUR EMAIL ADDRESS"
authors: ["YOUR NAME"]
homepage: "https://github.com/USERNAME/proj"
bug-reports: "https://github.com/USERNAME/proj/issues"
dev-repo: "git+https://github.com/USERNAME/proj.git"

synopsis: "Scripts for OCaml projects"
description: "description here"                    

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "dune" {build}
  "alcotest" {with-test}
]
