opam-version: "2.0"
maintainer: "author_email"
authors: ["author_name"]
homepage: "https://github.com/github_id/proj"
bug-reports: "https://github.com/github_id/proj/issues"
dev-repo: "git+https://github.com/github_id/proj.git"

synopsis: "project_synopsis"
description: "TODO: full description"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "dune" {build}
  "alcotest" {with-test}
]
